[project]
name = "keysight-p9375a"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "numpy>=2.4.2",
    "pymeasure>=0.15.0",
    "pyvisa>=1.16.1",
    "pyvisa-py>=0.8.1",
    "scikit-rf>=1.10.0",
]
